[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geosight"
version = "0.1.0"
description = "UK Land Intelligence Agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "requests>=2.31",
    "pypdf>=4.0",
    "streamlit>=1.35",
    "streamlit-folium>=0.20",
    "folium>=0.17",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["geosight*"]